--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+                    .login-logo{
+                        margin-top: 10px;
+                        margin-bottom: 20px;
+                    }
                     :root {
                        --light-green: #1ed760;
                    }
