--- a/style.css
+++ b/style.css
@@ -5,5 +5,12 @@
     color: #616467;
     background-color:white;
     border-radius: 25px;
+    border: 2px solid #616467;
     
+    
+}
+
+.btn-signup:hover{
+    background-color:#616467 ;
+    color: white;
 }
