Width change to social btns
made 100% width

--- a/style.css
+++ b/style.css
@@ -48,3 +48,13 @@
                    .appleIcon {
                        color: white;
                    }
+
+                   #login-with .login-with-items{
+                    width: 100%;
+                   }
+
+                   #login-with .login-with-items a{
+                       text-decoration: none;
+                       color: #fff;
+                       font-weight: 600;
+                   }
