--- a/stylehome.css
+++ b/stylehome.css
@@ -171,6 +171,21 @@
   }
   
   .hp-footer-left-side {
-      width: 35%;
+      max-width: 30%;
+      width: 28%;
       align-items: center;
+  }
+  
+  div.hp-footer-center-side {
+      width: 650px;
+      height: 80px;
+  }
+  
+  .hp-footer-center-gap {
+      column-gap: 30px;
+  }
+  
+  .hp-footer-center-img {
+      width: 20px;
+      max-width: 20px;
   }
