--- a/style.css
+++ b/style.css
@@ -27,3 +27,10 @@ body {
   position: relative;
   text-align: center;
 }
+
+.music-controls-section {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
