Added Footer to all pages with styles and images

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .hp-footer-bg {
-  background-color: var(--hp-footer-black);
+  background-color: var(--black);
 }
 
 .hp-footer-text {
