--- a/albums/album-style.css
+++ b/albums/album-style.css
@@ -37,26 +37,27 @@
     rgba(148, 8, 100, 1) 100%
   );
 }
-.header-buttons:nth-of-type(1){
+.header-buttons:nth-of-type(1) {
   width: 72px;
   position: absolute;
   top: 30px;
   left: 30px;
 }
-.btn{
+.sidebar-btn {
   font-size: 40px;
+  width: 100%;
 }
-.header-buttons .btn-2{
+.header-buttons .btn-2 {
   width: 72px;
   position: absolute;
   top: 0;
   left: 50px;
 }
-.header-buttons img{
+.header-buttons img {
   position: absolute;
   top: 300px;
 }
- .header-buttons>p:first-of-type{
+.header-buttons > p:first-of-type {
   position: absolute;
   top: 200px;
   left: 53px;
@@ -64,19 +65,25 @@
   color: white;
   font-family: "Times New Roman";
 }
-.header-buttons>p:last-of-type{
+.header-buttons > p:last-of-type {
   position: absolute;
   top: 300px;
   left: 53px;
   font-family: "Times New Roman";
 }
-.header-buttons>.dropdown{
+.header-buttons > .dropdown {
   position: absolute;
-    top: -20px;
-    left: 1000px;
+  top: -20px;
+  left: 1000px;
 }
-.album-picture{
+.album-picture {
   width: 100%;
   height: 500px;
   object-fit: cover;
+}
+
+.album-top-bg-image {
+  background-image: url(../assets/queen1.jpg);
+  height: 500px;
+  padding: 1.25rem;
 }
