--- a/albums/album-style.css
+++ b/albums/album-style.css
@@ -46,44 +46,19 @@
 .sidebar-btn {
   font-size: 40px;
   width: 100%;
-}
-.header-buttons .btn-2 {
-  width: 72px;
-  position: absolute;
-  top: 0;
-  left: 50px;
-}
-.header-buttons img {
-  position: absolute;
-  top: 300px;
-}
-.header-buttons > p:first-of-type {
-  position: absolute;
-  top: 200px;
-  left: 53px;
-  font-size: 36px;
-  color: white;
-  font-family: "Times New Roman";
-}
-.header-buttons > p:last-of-type {
-  position: absolute;
-  top: 300px;
-  left: 53px;
-  font-family: "Times New Roman";
-}
-.header-buttons > .dropdown {
-  position: absolute;
-  top: -20px;
-  left: 1000px;
-}
-.album-picture {
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
+
 }
 
 .album-top-bg-image {
   background-image: url(../assets/queen1.jpg);
   height: 500px;
   padding: 1.25rem;
+}
+.album-img-container{
+  position: relative;
+}
+.album-info{
+  position:absolute;
+  bottom: 10px;
+  left: 40px;
 }
