--- a/style.css
+++ b/style.css
@@ -1,214 +1,241 @@
 :root {
-  --light-green: #1ed760;
-  --light-black: #2a2a2a;
-  --dark-black: #121212;
-  --black: #1e1e1e;
-  --light-gray: #b3b3b3;
+    --light-green: #1ed760;
+    --light-black: #2a2a2a;
+    --dark-black: #121212;
+    --black: #1e1e1e;
+    --light-gray: #b3b3b3;
 }
 
 body {
-  background-color: var(--light-black);
-  color: white;
+    background-color: var(--light-black);
+    color: white;
 }
 
 .light-green-text {
-  color: var(--light-green);
+    color: var(--light-green);
 }
 
 .light-gray-text {
-  color: var(--light-gray);
+    color: var(--light-gray);
 }
 
 .divider {
-  border-top: 1px solid var(--light-gray);
-  display: block;
-  line-height: 1px;
-  margin: 15px 0;
-  position: relative;
-  text-align: center;
+    border-top: 1px solid var(--light-gray);
+    display: block;
+    line-height: 1px;
+    margin: 15px 0;
+    position: relative;
+    text-align: center;
 }
 
 .music-controls-section {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .hp-footer {
-  min-height: 6rem;
+    min-height: 6rem;
 }
 
 .hp-footer-bg {
-  background-color: var(--black);
+    background-color: var(--black);
 }
 
 .hp-footer-text {
-  color: #ffff;
-  font-size: 12px;
+    color: #ffff;
+    font-size: 12px;
 }
 
 a.hp-footer-a {
-  color: #ffff;
+    color: #ffff;
 }
 
 a.hp-footer-a-sm {
-  color: #a7a7a7;
+    color: #a7a7a7;
 }
 
 .hp-footer-text-t {
-  font-size: 14px;
-  font-weight: bold;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .hp-footer-img {
-  width: 70px;
-  height: 70px;
+    width: 70px;
+    height: 70px;
 }
 
 .hp-footer-icons {
-  color: #a7a7a7;
+    color: #a7a7a7;
 }
 
 .hp-footer-left-section {
-  max-width: 30%;
+    max-width: 30%;
 }
 
 .hp-footer-left-side {
-  width: 100%;
-  align-items: center;
+    width: 100%;
+    align-items: center;
 }
 
 .hp-footer-center-section {
-  max-width: 50%;
+    max-width: 50%;
 }
 
 div.hp-footer-center-side {
-  width: 100%;
-  height: 80px;
+    width: 100%;
+    height: 80px;
 }
 
 .hp-footer-center-gap {
-  column-gap: 30px;
+    column-gap: 30px;
 }
 
 .hp-footer-center-img {
-  width: 22px;
-  max-width: 22px;
-  height: 20px;
+    width: 22px;
+    max-width: 22px;
+    height: 20px;
 }
 
 .hp-footer-end-section {
-  max-width: 20%;
+    max-width: 20%;
 }
 
 .hp-footer-end-side {
-  width: 100%;
-  height: 80px;
+    width: 100%;
+    height: 80px;
 }
 
 div.bordered {
-  height: 3px;
-  width: 120px;
-  border: solid 2px gainsboro;
-  border-radius: 10px;
+    height: 3px;
+    width: 120px;
+    border: solid 2px gainsboro;
+    border-radius: 10px;
 }
 
 div.circle {
-  position: relative;
-  margin-top: -10px;
-  padding-bottom: 10px;
-  width: 30px;
-  height: 30px;
-  background: #e2e2e2;
-  border-radius: 50%;
+    position: relative;
+    margin-top: -10px;
+    padding-bottom: 10px;
+    width: 30px;
+    height: 30px;
+    background: #e2e2e2;
+    border-radius: 50%;
 }
 
 div.triangle {
-  position: absolute;
-  left: 11px;
-  top: 7px;
-  width: 0;
-  height: 0;
-  border-left: 8px solid #000000;
-  border-right: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-top: 8px solid transparent;
+    position: absolute;
+    left: 11px;
+    top: 7px;
+    width: 0;
+    height: 0;
+    border-left: 8px solid #000000;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-top: 8px solid transparent;
 }
 
 .rotate {
-  transform: rotate(180deg);
+    transform: rotate(180deg);
 }
+
 .side-bar {
-  background-color: black;
+    background-color: black;
 }
+
 .side-barimg {
-  margin-top: 15px;
+    margin-top: 15px;
 }
 
 .sidebar-btn {
-  width: 100%;
-  margin-left: 10px;
-  font-size: 20px;
+    width: 100%;
+    margin-left: 10px;
+    font-size: 20px;
 }
-.side-bar > p {
-  margin-left: 15px;
+
+.side-bar>p {
+    margin-left: 15px;
 }
 
 div.circle-top {
-  position: relative;
-  width: 20px;
-  height: 20px;
-  background: #000000;
-  border-radius: 50%;
+    position: relative;
+    width: 20px;
+    height: 20px;
+    background: #000000;
+    border-radius: 50%;
 }
 
 div.triangle-top-r {
-  position: absolute;
-  left: 8px;
-  top: 6px;
-  width: 0;
-  height: 0;
-  border-left: 4px solid #ffffff;
-  border-right: 4px solid transparent;
-  border-bottom: 4px solid transparent;
-  border-top: 4px solid transparent;
+    position: absolute;
+    left: 8px;
+    top: 6px;
+    width: 0;
+    height: 0;
+    border-left: 4px solid #ffffff;
+    border-right: 4px solid transparent;
+    border-bottom: 4px solid transparent;
+    border-top: 4px solid transparent;
 }
 
 div.triangle-top-l {
-  position: absolute;
-  left: 4px;
-  top: 6px;
-  width: 0;
-  height: 0;
-  border-left: 4px solid transparent;
-  border-right: 4px solid #ffffff;
-  border-bottom: 4px solid transparent;
-  border-top: 4px solid transparent;
+    position: absolute;
+    left: 4px;
+    top: 6px;
+    width: 0;
+    height: 0;
+    border-left: 4px solid transparent;
+    border-right: 4px solid #ffffff;
+    border-bottom: 4px solid transparent;
+    border-top: 4px solid transparent;
 }
 
 .hp-hero {
-  min-height: 35vh;
-  background: rgb(60, 9, 8);
-  background: linear-gradient(
-    180deg,
-    rgba(60, 9, 8, 1) 0%,
-    rgba(0, 0, 0, 1) 67%
-  );
+    min-height: 35vh;
+    background: rgb(60, 9, 8);
+    background: linear-gradient( 180deg, rgba(60, 9, 8, 1) 0%, rgba(0, 0, 0, 1) 67%);
 }
 
 .hp-card {
-  width: 18%;
-  max-height: 10%;
-  background-color: rgba(85, 84, 84, 0.37);
+    width: 18%;
+    max-height: 10%;
+    background-color: rgba(85, 84, 84, 0.37);
 }
 
 .hp-card-title {
-  color: white;
+    color: white;
 }
 
 button.btn.bg-black {
-  background-color: black;
-  color: white;
-  font-size: 15px;
+    background-color: black;
+    color: white;
+    font-size: 15px;
+}
+
+.hp-tag {
+    font-size: 12px;
+    padding-top: 6px;
+}
+
+.hp-sub-hero {
+    height: 70vh;
+    background-color: rgb(12, 12, 12);
+}
+
+.hp-subhero-card {
+    max-width: 12%;
+    max-height: 250px;
+    overflow: hidden;
+    box-sizing: border-box;
+    background-color: var(--dark-black);
+}
+
+.hp-subhero-title {
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    margin-bottom: 2px;
+}
+
+.hp-subhero-subtitle {
+    font-size: small;
 }
