Minor padding removed

--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ button.btn.bg-black {
   background-color: black;
   color: white;
   font-size: 15px;
+}
 .album-action-icons i {
   font-size: 1.5rem;
   margin-left: 1.5rem;
