--- a/albums/album-style.css
+++ b/albums/album-style.css
@@ -1,3 +1,7 @@
+.album-img-container .col-12{
+  padding: 0;
+}
+
 .smaller-text {
   font-size: 0.85rem;
 }
@@ -38,24 +42,64 @@
   );
 }
 
-.album-top-bg-image {
-  background-image: url(../assets/queen1.jpg);
-  height: 500px;
-  padding: 1.25rem;
+
+#album-header-container{
+  height: 250px;
+  padding-top: 30px;
+  transform: scaleY(1.2);
+  background: rgb(102,23,75);
+background: linear-gradient(0deg, rgba(102,23,75,1) 0%, rgba(148,36,116,1) 76%);
+
 }
-.album-img-container{
-  position: relative;
+
+.album-img{
+  height: 250px;
+  display: flex;
 }
-.album-info{
-  position:absolute;
-  bottom: 10px;
-  left: 50px;
+.album-img img{
+  width: 240px;
+  box-shadow: 0px 4px 19px -1px #252525;
 }
-.album-info>p:first-of-type{
-  font-size: 70px;
-  font-family: Arial, Helvetica, sans-serif;
+
+.album-content{
+  display: flex;
+  align-items: end;
+  transform: scaleY(0.9);
 }
-.album-info>p:last-of-type{
-  font-family: Arial, Helvetica, sans-serif;
-  color: #FDFDFD;
+
+.album-content-text {
+
+}
+
+.album-content-text .album-title{
+  font-weight: 800;
+  margin: 0;
+  font-size: 45px;
+}
+
+.album-content-text .album-mini-info{
+  font-size: small;
+  color:#c8a6c0;
+margin: 0;
+}
+
+.album-content-text .album-mini-info p{
+  margin: 0;
+}
+
+.album-content-text .profile-name{
+  color: white;
+  margin: 0;
+  margin: 0;
+}
+
+.album-content-text .album-badge{
+margin: 0;
+font-size: small;
+font-weight: 700;
+
+}
+
+#album-songs-container{
+  padding-top: 90px;
 }
