Added Hover Effects + Comments + Css Variables

--- a/artists/artist-style.css
+++ b/artists/artist-style.css
@@ -2,28 +2,6 @@
   padding: 0;
 }
 
-.smaller-text {
-  font-size: 0.85rem;
-}
-
-.album-action-icons i {
-  font-size: 1.5rem;
-  margin-left: 1.5rem;
-}
-
-.album-action-icons i:first-child {
-  font-size: 2.5rem;
-  margin-left: 0;
-}
-
-.album-action-icons .bi {
-  color: var(--light-gray);
-}
-
-.album-action-icons .bi-play-circle-fill {
-  color: var(--light-green);
-}
-
 .divider {
   margin-top: -0.5rem;
   margin-bottom: 1rem;
@@ -63,15 +41,21 @@
 }
 .album-info > p:last-of-type {
   font-family: Arial, Helvetica, sans-serif;
-  color: #fdfdfd;
+  color: var(--white);
 }
 
 .follow-btn {
   margin-left: 1.5rem;
-  border: 1px solid white;
+  border: 1px solid var(--white);
   padding: 0.25rem 0.75rem;
   font-weight: bold;
   font-size: 0.85rem;
+}
+
+.follow-btn:hover {
+  background-color: var(--white);
+  color: var(--black);
+  cursor: pointer;
 }
 
 .see-more {
