--- a/style.css
+++ b/style.css
@@ -6,13 +6,15 @@
   --dark-black: #121212;
   --light-gray: #b3b3b3;
   --white: #fff;
+  --sidebar-text-color:#a0a0a0;
   --black: #000;
   /* --new-color: red; */
 }
 
 body {
   background-color: var(--light-black);
-  color: var(--white);
+  color: var(--sidebar-text-color);
+  font-size: small;
 }
 
 .light-green-text {
@@ -49,7 +51,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(122, 122, 122);
+  border: rgb(122, 122, 122);
 }
 
 /* ----------------------------------------------- MUSIC CONTROLS SECTION (FOOTER) ----------------------------------------------- */
@@ -271,12 +273,17 @@ div.triangle-top-l {
 
 .hp-card div:nth-of-type(1) {
   background-color: rgba(85, 84, 84, 0.37);
-
   margin: 0 20px 0 0;
 }
 
 .hp-card-title {
   color: var(--white);
+  font-size: medium;
+}
+
+.hp-card-img-wrapper{
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 button.btn.bg-black {
@@ -299,7 +306,7 @@ button.btn.bg-black {
 }
 
 .hp-subhero-card img {
-  height: 225px;
+
 }
 
 .hp-subhero-title {
