--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --light-black: #2a2a2a;
   --dark-black: #121212;
   --light-gray: #b3b3b3;
+  --dark-gray: #727272;
   --white: #fff;
   --black: #000;
   /* --new-color: red; */
@@ -53,13 +54,6 @@ body {
 }
 
 /* ----------------------------------------------- MUSIC CONTROLS SECTION (FOOTER) ----------------------------------------------- */
-
-.music-controls-section {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
 
 .hp-footer {
   min-height: 6rem;
@@ -342,4 +336,36 @@ button.btn.bg-black {
 .song-info:hover p {
   color: var(--light-green);
   cursor: pointer;
+}
+
+.music-controls {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: var(--dark-black);
+  padding: 1rem;
+  padding-bottom: 0.5rem;
+}
+
+.music-controls img {
+  height: 50px;
+}
+
+.music-controls-section .bi-play-circle-fill {
+  font-size: 1.75rem;
+}
+
+.track-bar {
+  height: 3px;
+  width: 300px;
+  background-color: var(--dark-gray);
+  border-radius: 500px;
+}
+
+.volume-bar {
+  height: 3px;
+  width: 50px;
+  background-color: var(--light-gray);
+  border-radius: 300px;
 }
