--- a/style.css
+++ b/style.css
@@ -351,3 +351,9 @@ button.btn.bg-black {
 .hp-subhero-card img {
   ;
  }
+ #showstotry img{
+   border-radius: 20%;
+
+ }
+ #hits img{
+   border-radius:50%;
