--- a/profile/profile.css
+++ b/profile/profile.css
@@ -10,10 +10,10 @@
     /* width: 50px; */
     background-color: black;
   }
-  .add-name{
+  .edit-info{
     width: 100px;
     margin-top: 10px;
   }
-  .add-password{
+  .edit-info{
     width: 150px;
   }
