--- a/style.css
+++ b/style.css
@@ -275,6 +275,8 @@ button.btn.bg-black {
 /* ----------------------------------------------- RECENTLY PLAYED ----------------------------------------------- */
 .hp-subhero-card:hover {
   background-color: #3e3e3e;
+  transform: scale(1.1);
+  z-index: 2;
 }
 
 #showstotry img {
