--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ button.btn.bg-black {
 
 /* ----------------------------------------------- RECENTLY PLAYED ----------------------------------------------- */
 .hp-subhero-card:hover {
-  background-color: #3e3e3e;
+  background-color: #252525;
   transform: scale(1.1);
   z-index: 1;
 }
