--- a/profile/profile.css
+++ b/profile/profile.css
@@ -1,6 +1,7 @@
 .profile-picture{
+    /* width: 200px; */
     margin-top: 50px;
-    margin-left: 25px;
+    /* margin-left: 25px; */
   }
   .label-name{
     margin-top: 70px;
@@ -13,3 +14,7 @@
     width: 150px;
     margin-top: 10px;
   }
+  /* h1{
+      margin-left: 200px;
+      font-size: 30px;
+  } */
