--- a/style.css
+++ b/style.css
@@ -206,6 +206,18 @@ div.triangle-top-l {
   cursor: pointer;
 }
 
+#toggle-theme {
+  color: var(--white);
+}
+
+#toggle-theme:hover {
+  cursor: pointer;
+}
+
+.dropdown-menu {
+  background-color: var(--dark-black);
+}
+
 button.btn.bg-black {
   background-color: var(--black);
   color: var(--white);
