--- a/profile/profile.css
+++ b/profile/profile.css
@@ -8,13 +8,12 @@
     margin-left: 50px;
   }
   .form-control{
-    background-color: black;
+    background-color: var(--dark-black);
+    border: none;
+    outline: none;
   }
   .edit-info{
-    width: 150px;
-    margin-top: 10px;
+
+    margin-left: 10px;
   }
-  /* h1{
-      margin-left: 200px;
-      font-size: 30px;
-  } */
+ 
