Hidden X axis scroll

--- a/albums/album-style.css
+++ b/albums/album-style.css
@@ -79,6 +79,8 @@
 #album-songs-container {
   padding-top: 90px;
 }
-.scroll-bar {
-  max-height: 120vh;
+
+* {
+  overflow: hidden;
+  overflow-y: scroll;
 }
