Fixed Album Header Responsiveness

--- a/albums/album-style.css
+++ b/albums/album-style.css
@@ -80,7 +80,16 @@
   padding-top: 90px;
 }
 
-* {
+/* * {
   overflow: hidden;
   overflow-y: scroll;
+} */
+
+.album-content {
+  overflow: default;
+}
+
+.album-content img {
+  height: 200px;
+  box-shadow: 0px 4px 19px -1px #252525;
 }
