--- a/style.css
+++ b/style.css
@@ -1,343 +1,341 @@
 /* ----------------------------------------------- GENERAL STYLING ----------------------------------------------- */
 
 :root {
-  --light-green: #1ed760;
-  --light-black: #2a2a2a;
-  --dark-black: #121212;
-  --light-gray: #b3b3b3;
-  --white: #fff;
-  --black: #000;
-  /* --new-color: red; */
+    --light-green: #1ed760;
+    --light-black: #2a2a2a;
+    --dark-black: #121212;
+    --light-gray: #b3b3b3;
+    --white: #fff;
+    --black: #000;
+    /* --new-color: red; */
 }
 
 body {
-  background-color: var(--light-black);
-  color: var(--white);
+    background-color: var(--light-black);
+    color: var(--white);
 }
 
 .light-green-text {
-  color: var(--light-green);
+    color: var(--light-green);
 }
 
 .light-gray-text {
-  color: var(--light-gray);
+    color: var(--light-gray);
 }
 
 .divider {
-  border-top: 1px solid var(--light-gray);
-  display: block;
-  line-height: 1px;
-  margin: 15px 0;
-  position: relative;
-  text-align: center;
+    border-top: 1px solid var(--light-gray);
+    display: block;
+    line-height: 1px;
+    margin: 15px 0;
+    position: relative;
+    text-align: center;
 }
 
 .side-bar {
-  overflow: scroll;
+    overflow: scroll;
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #1e1e1e;
+    background: #1e1e1e;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #3e3e3e;
+    background: #3e3e3e;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(122, 122, 122);
+    background: rgb(122, 122, 122);
 }
+
 
 /* ----------------------------------------------- MUSIC CONTROLS SECTION (FOOTER) ----------------------------------------------- */
 
 .music-controls-section {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .hp-footer {
-  min-height: 6rem;
+    min-height: 6rem;
 }
 
 .hp-footer-bg {
-  background-color: var(--dark-black);
+    background-color: var(--dark-black);
 }
 
 .hp-footer-text {
-  color: var(--white);
-  font-size: 12px;
+    color: var(--white);
+    font-size: 12px;
 }
 
 a.hp-footer-a {
-  color: var(--white);
+    color: var(--white);
 }
 
 a.hp-footer-a-sm {
-  color: var(--light-gray);
+    color: var(--light-gray);
 }
 
 .hp-footer-text-t {
-  font-size: 14px;
-  font-weight: bold;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .hp-footer-img {
-  width: 70px;
-  height: 70px;
+    width: 70px;
+    height: 70px;
 }
 
 .hp-footer-icons {
-  color: var(--light-gray);
+    color: var(--light-gray);
 }
 
 .hp-footer-left-section {
-  max-width: 30%;
+    max-width: 30%;
 }
 
 .hp-footer-left-side {
-  width: 100%;
-  align-items: center;
+    width: 100%;
+    align-items: center;
 }
 
 .hp-footer-center-section {
-  max-width: 50%;
+    max-width: 50%;
 }
 
 div.hp-footer-center-side {
-  width: 100%;
-  height: 80px;
+    width: 100%;
+    height: 80px;
 }
 
 .hp-footer-center-gap {
-  column-gap: 30px;
+    column-gap: 30px;
 }
 
 .hp-footer-center-img {
-  width: 22px;
-  max-width: 22px;
-  height: 20px;
+    width: 22px;
+    max-width: 22px;
+    height: 20px;
 }
 
 .hp-footer-end-section {
-  max-width: 20%;
+    max-width: 20%;
 }
 
 .hp-footer-end-side {
-  width: 100%;
-  height: 80px;
+    width: 100%;
+    height: 80px;
 }
 
 div.bordered {
-  height: 3px;
-  width: 120px;
-  border: solid 2px var(--light-gray);
-  border-radius: 10px;
+    height: 3px;
+    width: 120px;
+    border: solid 2px var(--light-gray);
+    border-radius: 10px;
 }
 
 div.circle {
-  position: relative;
-  margin-top: -10px;
-  padding-bottom: 10px;
-  width: 30px;
-  height: 30px;
-  background: var(--light-gray);
-  border-radius: 50%;
+    position: relative;
+    margin-top: -10px;
+    padding-bottom: 10px;
+    width: 30px;
+    height: 30px;
+    background: var(--light-gray);
+    border-radius: 50%;
 }
 
 div.triangle {
-  position: absolute;
-  left: 11px;
-  top: 7px;
-  width: 0;
-  height: 0;
-  border-left: 8px solid var(--black);
-  border-right: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-top: 8px solid transparent;
+    position: absolute;
+    left: 11px;
+    top: 7px;
+    width: 0;
+    height: 0;
+    border-left: 8px solid var(--black);
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-top: 8px solid transparent;
 }
 
 .rotate {
-  transform: rotate(180deg);
+    transform: rotate(180deg);
 }
+
 
 /* ----------------------------------------------- SIDEBAR ----------------------------------------------- */
 
 .spotify-logo {
-  max-width: 90%;
+    max-width: 90%;
 }
 
 .side-bar {
-  background-color: var(--black);
-  overflow: hidden;
-  min-height: 100vh;
+    background-color: var(--black);
+    overflow: hidden;
+    min-height: 100vh;
 }
 
 .side-bar img {
-  margin-top: 15px;
+    margin-top: 15px;
 }
 
 .side-bar a {
-  color: var(--light-gray);
-  padding: 0.25rem 0.5rem;
-  text-decoration: none;
+    color: var(--light-gray);
+    padding: 0.25rem 0.5rem;
+    text-decoration: none;
 }
 
 .side-bar a.selected {
-  background-color: var(--light-gray);
-  color: var(--dark-black);
+    background-color: var(--light-gray);
+    color: var(--dark-black);
 }
 
 .side-bar a p {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .side-bar a:hover {
-  cursor: pointer;
-  background-color: var(--light-gray);
-  color: var(--dark-black);
+    cursor: pointer;
+    background-color: var(--light-gray);
+    color: var(--dark-black);
 }
 
 .side-bar p {
-  margin-left: 1.5rem;
+    margin-left: 1.5rem;
 }
 
 .side-bar p:hover {
-  color: var(--light-green);
-  cursor: pointer;
+    color: var(--light-green);
+    cursor: pointer;
 }
 
 .sidebar-links {
-  margin-left: 1rem;
+    margin-left: 1rem;
 }
 
 .sidebar-links:hover {
-  text-decoration: none;
-  color: var(--light-gray);
+    text-decoration: none;
+    color: var(--light-gray);
 }
 
 div.circle-top {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  background: var(--black);
-  border-radius: 50%;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background: var(--black);
+    border-radius: 50%;
 }
 
 div.triangle-top-r {
-  position: absolute;
-  left: 13.5px;
-  top: 9px;
-  width: 0;
-  height: 0;
-  border-left: 6px solid var(--white);
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid transparent;
-  border-top: 6px solid transparent;
+    position: absolute;
+    left: 13.5px;
+    top: 9px;
+    width: 0;
+    height: 0;
+    border-left: 6px solid var(--white);
+    border-right: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-top: 6px solid transparent;
 }
 
 div.triangle-top-l {
-  position: absolute;
-  left: 6px;
-  top: 9px;
-  width: 0;
-  height: 0;
-  border-left: 6px solid transparent;
-  border-right: 6px solid var(--white);
-  border-bottom: 6px solid transparent;
-  border-top: 6px solid transparent;
+    position: absolute;
+    left: 6px;
+    top: 9px;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid var(--white);
+    border-bottom: 6px solid transparent;
+    border-top: 6px solid transparent;
 }
 
 .hp-hero {
-  min-height: 35vh;
-  background: rgb(60, 9, 8);
-  background: linear-gradient(
-    180deg,
-    rgba(60, 9, 8, 1) 0%,
-    rgba(0, 0, 0, 1) 67%
-  );
+    min-height: 35vh;
+    background: rgb(60, 9, 8);
+    background: linear-gradient( 180deg, rgba(60, 9, 8, 1) 0%, rgba(0, 0, 0, 1) 67%);
 }
 
 .hp-card {
-  width: 18%;
-  max-height: 10%;
-  padding: 0;
+    width: 18%;
+    max-height: 10%;
+    padding: 0;
 }
 
 .hp-card div:nth-of-type(1) {
-  background-color: rgba(85, 84, 84, 0.37);
-
-  margin: 0 20px 0 0;
+    background-color: rgba(85, 84, 84, 0.37);
+    margin: 0 20px 0 0;
 }
 
 .hp-card-title {
-  color: var(--white);
+    color: var(--white);
 }
 
 button.btn.bg-black {
-  background-color: var(--black);
-  color: var(--white);
-  font-size: 15px;
+    background-color: var(--black);
+    color: var(--white);
+    font-size: 15px;
 }
 
 .hp-tag {
-  font-size: 12px;
-  padding-top: 6px;
+    font-size: 12px;
+    padding-top: 6px;
 }
 
 .hp-sub-hero {
-  background-color: var(--black);
+    background-color: var(--black);
 }
 
 .hp-subhero-card {
-  background-color: var(--dark-black);
+    background-color: var(--dark-black);
 }
 
 .hp-subhero-card img {
-  height: 225px;
+    height: 225px;
 }
 
 .hp-subhero-title {
-  color: var(--white);
-  font-weight: 700;
-  margin-bottom: 2px;
+    color: var(--white);
+    font-weight: 700;
+    margin-bottom: 2px;
 }
 
 .hp-subhero-subtitle {
-  font-size: small;
+    font-size: small;
 }
+
 
 /* ----------------------------------------------- ALBUM & ARTIST PAGE STYLING ----------------------------------------------- */
 
 .album-action-icons i {
-  font-size: 1.5rem;
-  margin-left: 1.5rem;
+    font-size: 1.5rem;
+    margin-left: 1.5rem;
 }
 
 .album-action-icons i:first-child {
-  font-size: 2.5rem;
-  margin-left: 0;
+    font-size: 2.5rem;
+    margin-left: 0;
 }
 
 .album-action-icons .bi {
-  color: var(--light-gray);
+    color: var(--light-gray);
 }
 
 .album-action-icons .bi-play-circle-fill,
 .album-action-icons .bi-pause-circle-fill {
-  color: var(--light-green);
+    color: var(--light-green);
 }
 
 .smaller-text {
-  font-size: 0.85rem;
+    font-size: 0.85rem;
 }
 
 .song-info:hover p {
-  color: var(--light-green);
-  cursor: pointer;
+    color: var(--light-green);
+    cursor: pointer;
 }
