--- a/favourites/favourites.css
+++ b/favourites/favourites.css
@@ -12,6 +12,10 @@ background: linear-gradient(0deg, rgba(18, 15, 25, 0.705) 0%, rgba(58,34,129,1) 
     max-width: 250px;
 }
 
+#favourite-header .song-img img{
+    box-shadow: 0px 2px 50px 8px black;
+}
+
 #favourite-header .header-text-content{
     display: flex;
     flex-direction: column;
