--- a/style.css
+++ b/style.css
@@ -311,3 +311,12 @@ button.btn.bg-black {
   border-radius: 300px;
 }
 
+.buttoncard{
+  height: 40px;
+  width: 40px;
+  background-color:#6CC04A;
+  border-radius: 50%;
+  
+
+
+}
