--- a/style.css
+++ b/style.css
@@ -316,7 +316,21 @@ button.btn.bg-black {
   width: 40px;
   background-color:#6CC04A;
   border-radius: 50%;
+  position: relative;
   
+
+
+}
+.buttoncard::before{
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 
 
 }
