--- a/style.css
+++ b/style.css
@@ -324,13 +324,16 @@ button.btn.bg-black {
 .buttoncard::before{
   content: "";
   position: absolute;
-  width: 8px;
-  height: 8px;
-  background-color: white;
+  width: 0;
+  height: 0;  
   top: 0;
   bottom: 0;
   right: 0;
-  left: 0;
+  left: 3px;
+  margin: auto;
+  border-style:solid;
+  border-width: 7px 0 7px 13px;
+  border-color: transparent transparent transparent white;
 
 
 }
