--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ button.btn.bg-black {
   background-color:#6CC04A;
   border-radius: 50%;
   position: relative;
+  opacity: 0;
   
 
 
@@ -334,6 +335,11 @@ button.btn.bg-black {
   border-style:solid;
   border-width: 7px 0 7px 13px;
   border-color: transparent transparent transparent white;
+
+
+}
+.hp-subhero-card:hover .buttoncard {
+  opacity: 1;
 
 
 }
