--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* ----------------------------------------------- GENERAL STYLING ----------------------------------------------- */
-
+html{
+  scroll-behavior: smooth;
+}
 :root {
   --light-green: #1ed760;
   --light-black: #2a2a2a;
