--- a/style.css
+++ b/style.css
@@ -224,6 +224,7 @@ button.btn.bg-black {
 
 .hp-subhero-card {
   background-color: var(--dark-black);
+  position: relative;
 }
 
 .hp-subhero-title {
@@ -318,6 +319,10 @@ button.btn.bg-black {
   border-radius: 50%;
   position: relative;
   opacity: 0;
+  transition: opacity 0.5s ease;
+  bottom: 50px;
+  
+  
   
 
 
@@ -340,6 +345,10 @@ button.btn.bg-black {
 }
 .hp-subhero-card:hover .buttoncard {
   opacity: 1;
+  transition-delay: 0.1s;
 
 
+}
+.buttoncard:hover{
+  transform: scale(1.1);
 }
