added carousel changes

--- a/albums/album-style.css
+++ b/albums/album-style.css
@@ -93,3 +93,17 @@
   height: 200px;
   box-shadow: 0px 4px 19px -1px #252525;
 }
+.carasoul-btn1{
+  width: 60px;
+}
+.dot-icon{
+  margin-left: 10px;
+  font-size: 25px;
+}
+
+.carasoul-btns{
+  width: 150px;
+}
+.btn-saved{
+  border-color: white;
+}
