--- a/style.css
+++ b/style.css
@@ -268,6 +268,12 @@ button.btn.bg-black {
 .hp-subhero-card {
   background-color: var(--dark-black);
   position: relative;
+  margin:  2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  
+
+
   
 }
 
@@ -380,15 +386,15 @@ button.btn.bg-black {
   }
 }
 .buttoncard{
-  height: 40px;
-  width: 40px;
+  height: 30px;
+  width: 30px;
   background-color:#6CC04A;
   border-radius: 50%;
   position: absolute;
   opacity: 0;
   transition: opacity 0.5s ease;
   right: 25px;
-  bottom: 110px;
+  bottom: 125px;
   
   
   
@@ -420,4 +426,9 @@ button.btn.bg-black {
 }
 .buttoncard:hover{
   transform: scale(1.1);
+}
+
+#recentlyplayed .row{
+  flex-wrap: nowrap;
+  margin-right: 25px;
 }
