--- a/style.css
+++ b/style.css
@@ -268,6 +268,10 @@ button.btn.bg-black {
 .hp-subhero-card {
   background-color: var(--dark-black);
   position: relative;
+  margin:  2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  
 }
 
 .hp-subhero-title {
