--- a/login/login-style.css
+++ b/login/login-style.css
@@ -71,6 +71,9 @@ footer p {
     background-color: white;
     border-radius: 25px;
     border: 2px solid #616467;
+    height: 45px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .btn-signup:hover {
